# BGPTrack

./: .env  .gitignore  Cargo.toml  bgp_track
App/: .dockerignore  Cargo.toml  Dockerfile  build.rs
App/migrations/: 20230915001918_bgp_track.down.sql  20230915001918_bgp_track.up.sql  20230915002226_indexes.down.sql  20230915002226_indexes.up.sql
App/src/: bgp.rs  main.rs  seclytics_api.rs
migrations/: 00017_BGP_table.sql  00018_BGP_table.sql  0001_BGP_table.sql  0002_BGP_table.sql  0003_BGP_table.sql  0005_BGP_table.sql  0006_BGP_table.sql  0011_BGP_table.sql  0016_BGP_table.sql
src/: bgp.rs  db_writer.rs  main.rs  old_main.rs  seclytics_api.rs
trash/: 00019_BGP_table.sql  0001_BGP_table.sql  00020_BGP_table.sql  0003_BGP_table.sql  0004_BGP_table.sql  0005_BGP_table.sql  0007_BGP_table.sql  0008_BGP_table.sql  0009_BGP_table.sql  0010_BGP_table.sql  0012_BGP_table.sql  0014_BGP_table.sql  0015_BGP_table.sql
